# charlie-engine

./: .gitignore  CMakeLists.txt  ECS_COMPLETE_STATUS.md  ECS_QUICK_REFERENCE.md  ECS_USAGE_GUIDE.md  PLAYERCOMPONENT_REFACTORING.md  SYSTEMS_README.md  makefile  vcpkg.json
assets/: WHAT.csv
engine/SDLCore/: AudioManager.cpp  Camera.cpp  Camera.hpp  Collision.cpp  GameObject.hpp  InputManager.hpp  Scene.cpp  Scene.hpp  SceneFactory.cpp  SceneFactory.hpp  TextureManager.cpp
engine/components/: AnimatedSpriteComponent.hpp  Animation.hpp  AnimationStateComponent.hpp  ButtonComponent.hpp  CameraFollowComponent.hpp  ColliderComponent.hpp  InputComponent.hpp  LabelComponent.hpp  LifetimeComponent.hpp  RenderComponent.h  RenderComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
engine/core/: Component.hpp  Component.inl  ComponentArray.hpp  ComponentManager.hpp  Entity.cpp  Entity.hpp  Entity.inl  EventBus.hpp  Events.hpp  Manager.cpp  Manager.hpp  System.hpp
engine/systems/: AnimationSystem.hpp  AudioSystem.hpp  CameraFollowSystem.hpp  CollisionSystem.hpp  InputSystem.hpp  LifetimeSystem.hpp  MovementSystem.hpp  PhysicsSystem.hpp  RenderLayer.hpp  RenderSystem.hpp  RenderUtils.hpp  ScriptSystem.hpp
engine/ui/: HUD.cpp  HUD.hpp
engine/utils/: EntityUtils.hpp  Math.hpp
game.dSYM/Contents/Resources/Relocations/aarch64/: game.yml
include/: AudioManager.hpp  Game.hpp  GameObject.hpp  Scene.hpp  TextureManager.hpp
include/ECS/: AnimatedSpriteComponent.hpp  AnimationStateComponent.hpp  AnimationSystem.hpp  AudioSystem.hpp  ButtonComponent.hpp  ColliderComponent.hpp  CollisionSystem.hpp  CombatComponent.hpp  CombatSystem.hpp  Components.hpp  DamageComponent.hpp  ECSConfig.hpp  EnemyAISystem.hpp  Entity.hpp  EntityUtils.hpp  FlashOnHitComponent.hpp  InputComponent.hpp  InputSystem.hpp  LifetimeComponent.hpp  LifetimeSystem.hpp  Manager.hpp  PhysicsSystem.hpp  PlayerIdComponent.hpp  PlayerInputSystem.hpp  SYSTEMS_USAGE.cpp  ScriptComponent.hpp  ScriptSystem.hpp  SpriteComponent.hpp  System.hpp  Systems.hpp  TileComponent.hpp  TransformComponent.hpp
include/components/: BulletComponent.hpp  CombatComponent.hpp  DamageComponent.hpp  EnemyComponent.hpp  FlashOnHitComponent.hpp  PlayerComponent.hpp  PlayerIdComponent.hpp  ProjectileComponent.hpp  ScriptComponent.hpp  ScriptComponents.hpp  WallComponent.hpp
include/scenes/: MainMenu.hpp
include/scripts/: AnimationSystem.hpp  CameraFollowSystem.hpp  CollisionSystem.hpp  CombatSystem.hpp  Components.hpp  EnemyAISystem.hpp  EnemyComponent.hpp  FlashSystem.hpp  HUDSystem.hpp  InputSystem.hpp  PlayerComponent.hpp  PlayerInputSystem.hpp  RenderSystem.hpp  SYSTEMS_USAGE.cpp  ScriptComponents.hpp  ScriptSystem.hpp  Systems.hpp  WallComponent.hpp
src/: AudioManager.cpp  AudioManager.hpp  Camera.cpp  Camera.hpp  Collision.cpp  Collision.h  Components.h  ECS.h  FontLoader.cpp  FontLoader.hpp  Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  InputManager.cpp  Map.cpp  Map.h  PlayerComponent.cpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  TextureManager.cpp  TextureManager.h  TextureManager.hpp  Vector2D.cpp  Vector2D.h  Vector2D.hpp  main.cpp
src/ECS/: AnimatedSpriteComponent.hpp  ColliderComponent.h  ColliderComponent.hpp  Component.cpp  Components.h  Components.hpp  ECS.cpp  ECS.h  ECS.hpp  Entity.cpp  KeyboardController.h  KeyboardController.hpp  LabelComponent.hpp  Manager.cpp  PositionComponent.h  ScriptComponent.h  ScriptComponent.hpp  SpriteComponent.h  SpriteComponent.hpp  TileComponent.h  TransformComponent.h  TransformComponent.hpp
src/components/: PlayerComponent.cpp
src/scenes/: MainMenu.cpp  MainMenu.hpp
src/scripts/: BulletComponent.h  BulletComponent.hpp  GameObject.cpp  Map.cpp  PlayerComponent.h  PlayerComponent.hpp  ScriptComponents.h  ScriptComponents.hpp  WallComponent.hpp  _ComponentTemplate
